--- a/src/app/cart/components/cart/cart.component.html
+++ b/src/app/cart/components/cart/cart.component.html
@@ -13,7 +13,7 @@
                   </div>
                   <hr class="my-4">
 
-                  <div class="row mb-4 d-flex justify-content-between align-items-center" *ngFor="let item of cardpro,let i as index">
+                  <div class="row mb-4 d-flex justify-content-between align-items-center" *ngFor="let item of cardpro,let i = index">
                     <div class="col-md-2 col-lg-2 col-xl-2">
                       
                       <img src="{{item.item.image}}" class="img-fluid rounded-3" alt="">
@@ -22,14 +22,18 @@
                       <h6 class="text-muted">{{item.item.title}}</h6>
                       <h6 class="text-muted">{{item.item.price | currency}}</h6>
                     </div>
-                    <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
-                      
-                      <input id="form1" min="0" name="quantity" value="1" type="number"
-                        class="form-control form-control-sm" (ngModelChange)="plas(i)" [(ngModel)]="item.quantity" />
-                      
+                    <div class="col-md-3 col-lg-3 col-xl-2 d-flex justify-content-center" style="width: 25vh;">
+                      <button class="btn btn-dark text-warning" style="width: 25%; height: 25%;" (click)="plas(i)" >
+                        <h2>+</h2>
+                      </button>
+                      <input id="form1"  min="0" name="quantity" value="1" type="number"
+                        class="form-control form-control-sm" (ngModelChange)="plas(i)"  (ngModelChange)="minus(i)" (change)="detcted()" [(ngModel)]="item.quantity" />
+                        <button class="btn btn-dark text-warning"   style="width: 25%; height: 25%;" (click)="minus(i)">
+                        <h2>-</h2>
+                      </button>
                     </div>
                     <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                      <h6 class="mb-0">{{item.item.price * item.quantity}}</h6>
+                      <h6 class="mb-0">{{item.item.price * item.quantity}}</h6>   
                       
                     </div>
                     <div class="col-md-1 col-lg-1 col-xl-1 text-end">
@@ -37,7 +41,7 @@
                      
                     </div>
                   
-                    <button class="mb-0" (click)="deletme(item.item.id)">Delete</button>
+                    <button class="mb-0" (click)="deletme(i)">Delete</button>
                   
                   </div>
                  
@@ -58,26 +62,45 @@
                   <hr class="my-4">
 
                   <div class="d-flex justify-content-between mb-4">
-                    <h5 class="text-uppercase">items 3</h5>
+                    <h5 class="text-uppercase">items {{cardpro.length}}</h5>
                    
                   </div>
 
                   
 
-                  <h5 class="text-uppercase mb-3">Give Info</h5>
-                 <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit()">
+                  <h5 class="text-uppercase mb-4">Give Info</h5>
+                 <form [formGroup]="doneform" (ngSubmit)="handel()">
                   <div class="mb-5">
                     <div class="form-outline">
-                      <input type="text" id="name" class="form-control form-control-lg" formControlName="name"  #nameyou [(ngModel)]="name" required/>
+                      <input type="text" id="name" class="form-control form-control-lg"  #nameyou [(ngModel)]="name"  formControlName="username" required/>
                       <label class="form-label" for="name">Full Name</label>
+                      <div class="alert alert-danger" *ngIf="isSubmit && username?.invalid">
+                        <div *ngIf="username?.errors?.['required']">
+                              FullName Is Require
+                        </div>
+                        
+                      </div>
                     </div>
                     <div class="form-outline">
-                      <input type="text" id="address" class="form-control form-control-lg" formControlName="address" required />
+                      <input type="text" id="address" class="form-control form-control-lg" formControlName="address" required/>
                       <label class="form-label" for="form3Examplea2"> Address</label>
+                      <div class="alert alert-danger" *ngIf="isSubmit && address?.invalid">
+                        <div *ngIf="address?.errors?.['required']">
+                          Address Is Require
+                        </div>
+                      </div>
+                    
                     </div>
                     <div class="form-outline">
-                      <input type="number" id="form3Examplea2" class="form-control form-control-lg" formControlName="numcard" required/>
+                      <input type="text" id="form3Examplea2" class="form-control form-control-lg"  formControlName="numcard" required/>
                       <label class="form-label" for="form3Examplea2"> Credit Card Number</label>
+                      <div class="alert alert-danger" *ngIf="isSubmit && numcard?.invalid">
+                        <div *ngIf="numcard?.errors?.['pattern']">
+                          Credit Card Is must have only numbers 
+                        </div>
+                        
+                      </div>
+                      
                     </div>
                   </div>
 
@@ -85,11 +108,15 @@
 
                   <div class="d-flex justify-content-between mb-5">
                     <h5 class="text-uppercase">Total price</h5>
-                    <h5 style="font-size:larger">$ {{totle}}</h5>
+                    <h5 style="font-size:larger">$ {{total}}</h5>
                   </div>
 
-                  <button type="submit" class="btn btn-dark btn-block btn-lg"
-                    data-mdb-ripple-color="dark" (click)="final()">Done</button>
+                  <button type="button" class="btn btn-dark btn-block btn-lg"
+                    data-mdb-ripple-color="dark" (click)="handel()" style="position: relative; left: 6vh;bottom:5vh" >submit</button>
+                    <div>
+                    <button type="button" class="btn btn-dark btn-block btn-lg"
+                    data-mdb-ripple-color="dark"  (click)="final()" style="width: 25vh; position: relative; top: 6vh;">Done</button>
+                    </div>
                  </form>
                 </div>
               </div>
@@ -100,3 +127,10 @@
     </div>
   </div>
 </section>
+
+
+
+
+<!-- 
+#nameyou [(ngModel)]="name" -->
+<!-- <button type="button" (click)="submitForm()"> -->
