--- a/src/app/products/component/productalone/productalone.component.html
+++ b/src/app/products/component/productalone/productalone.component.html
@@ -8,7 +8,7 @@
             
             <p class="card-text">{{product.price | currency}}</p>
           
-            <input type="number" class="form-control" style="width: 30%;position: relative; left: 35%; margin-bottom: 5px;" [(ngModel)]="myquantity">
+            <input type="number" min=1 class="form-control" value="1" style="width: 30%;position: relative; left: 35%; margin-bottom: 5px;" [(ngModel)]="myquantity">
             
            
             <button type="button" class="btn" (click)="add()">Add To Cart</button>
